# Azure-DCAP-Client

./: .gitignore  README.md
.config/: servicetreeconfig.json
.github/actions/actionAzVmRunCommand/: action.yml  actionAzVmRunCommand.yml
.github/windowsScripts/: CleanOldRepo.ps1  DCAPBuildMain.ps1  DCAPCloneMain.ps1  DCAPUnitTestsMain.ps1
.github/workflows/: buildPipeline.yml  codeql.yml
.github/workflows/scripts/: buildcode.cmd  install_prereqs.cmd
.jenkins/: Dockerfile  Dockerfile.scripts  Jenkinsfile  JenkinsfileTestLinuxRelease  build_docker_images.Jenkinsfile
.jenkins/common/: Dcap.groovy
.jenkins/src/: Dcap.groovy
.pipeline/: LinuxPackage.sh  build.cmd  package.cmd  pipeline.user.windows.all_buildtype.all_tag.Windows2019.yml
.pipelines/: build.cmd  buildLinux.cmd  nuget.config  packages.config  pipeline.user.linux.all_buildtype.all_tag.Ubuntu1604.yml  pipeline.user.linux.all_buildtype.all_tag.Ubuntu1804.yml  pipeline.user.linux.yml  pipeline.user.windows.all_buildtype.all_tag.Windows2016.yml  pipeline.user.windows.all_buildtype.all_tag.Windows2019.yml  pipeline.user.windows.yml  pipeline.user.yml
cicd/: deploy-test.sh
src/: .clang-format  CMakeLists.txt  UnitTestMap.xml  UnitTestsJobGroup.Xml  curl_easy.cpp  curl_easy.h  dcap_provider.cpp  dcap_provider.h  environment.h  local_cache.h  logging.cpp  private.h  sgx_ql_lib_common.h
src/Linux/: CMakeLists.txt  Makefile  Makefile.in  README.MD  configure  curl_easy.cpp  curl_easy.h  init.cpp  local_cache.cpp
src/Linux/GoogleTest/: AzureGalleryGoogleTestGroup.xml  GoogleTest.csproj  GoogleTestTestMap.xml  cleanupscript.sh  runtests.sh  setupscript.sh
src/Linux/debian/: changelog  control  copyright  rules
src/UnitTest/: test_local_cache.cpp  test_quote_prov.cpp  unit_test.h
src/UnitTests/: main.cpp  test_local_cache.cpp  test_quote_prov.cpp  unit_test.h
src/Windows/: .gitignore  README.MD  build.ps1  curl_easy.cpp  curl_easy.h  dcap_provider.def  dcap_provider.nuspec  dcap_provider.sln  dcap_provider.vcxproj  dllmain.cpp  get-prereqs.ps1  local_cache.cpp  packages.config
src/Windows/AzureDCAPSetupProject/: AzureDCAPSetupProject.wixproj  License.rtf  Product.wxs
src/Windows/GeneratePackage/: Azure.DCAP.Windows.nuspec  InstallAzureDCAP.ps1  NOTICE.txt  README.txt
src/Windows/GoogleTestAdapter/: GoogleTestAdapter.VsPackage.TAfGT.pkgdef  catalog.json  extension.vsixmanifest  manifest.json
src/Windows/UnitTest/: dcap_provider_ut.sln  dcap_provider_ut.vcxproj  dcap_provider_ut.vcxproj.filters  dcap_provider_ut_example.sln  dcap_provider_ut_example.vcxproj  packages.config
src/Windows/UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj  UnitTest1.vcxproj.filters
src/Windows/UnitTests/: UnitTests.vcxproj  packages.config
src/Windows/dcap_provider_tests/: dcap_provider_tests.vcxproj  dcap_provider_tests.vcxproj.filters  easy_curl_tests.cpp  packages.config  stdafx.cpp
src/Windows/dcap_provider_utests/: dcap_provider_utests.cpp  dcap_provider_utests.vcxproj  dcap_provider_utests.vcxproj.filters  local_cache.cpp  test_local_cache.cpp  test_quote_prov.cpp
src/Windows/dll/: build.ps1  curl_easy.cpp  curl_easy.h  dcap_provider.def  dcap_provider.nuspec  dcap_provider.rc  dcap_provider.sln  dcap_provider.vcxproj  dllmain.cpp  event_log.h  evtx_logging.cpp  evtx_logging.h  local_cache.cpp  nuget.config  packages.config  resource.h
src/Windows/dll/resources/: event_log.mc  resource.h
src/Windows/gUnitTestDll/: cpp.hint  gUnitTestDll.cpp  gUnitTestDll.h  gUnitTestDll.vcxproj  gUnitTestDll.vcxproj.filters
src/Windows/gUnitTests/: dcap_provider_ut.cpp  gUnitTests.vcxproj  local_cache.cpp  packages.config  test_local_cache.cpp  test_quote_prov.cpp
var/jenkins/shared/: Dcap.groovy
(+1 files in other folders)
